[Sync] Record orphaned metadata counts per data type to UMA

This CL makes a first step in addressing the issue that some bridges
leak orphan metadata: the data entities get deleted but the metadata
entities stay around and the processor does not get notified about the
deletion.

This CL introduces a metric that will help us understand which bridges
have such a leaky behavior.

Bug: 871733
Change-Id: I2c751c574823cddbb21640d21462b6b778d9cb6f
Reviewed-on: https://chromium-review.googlesource.com/1219615
Commit-Queue: Ilya Sherman <isherman@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590844}
Former-commit-id: 6f5ec1c6d6bec9e7a08170aca95bd101f6d0a1e0