components/sync/model/fake_model_type_sync_bridge.cc
@@ -200,6 +200,11 @@ void FakeModelTypeSyncBridge::DeleteItem(const std::string& key) {
   }
 }
 
+void FakeModelTypeSyncBridge::MimicBugToLooseItemWithoutNotifyingProcessor(
+    const std::string& key) {
+  db_->RemoveData(key);
+}
+
 std::unique_ptr<MetadataChangeList>
 FakeModelTypeSyncBridge::CreateMetadataChangeList() {
   return std::make_unique<InMemoryMetadataChangeList>();
@@ -300,8 +305,11 @@ void FakeModelTypeSyncBridge::GetData(StorageKeyList keys,
 
   auto batch = std::make_unique<MutableDataBatch>();
   for (const std::string& key : keys) {
-    DCHECK(db_->HasData(key)) << "No data for " << key;
-    batch->Put(key, CopyEntityData(db_->GetData(key)));
+    if (db_->HasData(key)) {
+      batch->Put(key, CopyEntityData(db_->GetData(key)));
+    } else {
+      DLOG(WARNING) << "No data for " << key;
+    }
   }
   std::move(callback).Run(std::move(batch));
 }
